--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
 
 <body>
     <main class="container">
-        <p id="message">Think of a number</p>
+        <p id="message">Tänk på ett nummer mellan 0 - 100</p>
         <div class="button-group">
-            <button id="too-high-btn">Too high!</button>
-            <button id="too-low-btn">Too low!</button>
+            <button id="too-high-btn">För högt!</button>
+            <button id="is-correct-btn">Rätt!</button>
+            <button id="too-low-btn">För lågt!</button>
+            <button id="Reload">Ladda om!</button>
         </div>
     </main>
     <div id="before-start" class="container">
-        <p></p>
-        <button id="start-btn">Ok, I'm ready</button>
+        <p>Gissningsspel</p>
+        <h3>Får det ej att funkar korrekt, klicka på knappen "ladda om!" för att datorn ska gissa igen till det är rätt</h3>
+        <button id="start-btn">Jag är redo!</button>
     </div>
 </body>
 
